[metadata]
name = phwd
version = 0.0.1
author = ollieausum
author_email = ollieollieausum@gmail.com
description = phwd: The historical weather data library for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OllieOllieAusum/phwd
project_urls =
    Bug Tracker = https://github.com/OllieOllieAusum/phwd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src